--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 clap = { version = "4.5.8", features = ["derive"] }
 hex = "0.4.3"
 sha2 = "0.10.8"
